Возврат к использованию xxd, так как objcopy на Windows старой версии.

--- a/src/Makefile
+++ b/src/Makefile
@@ -22,7 +22,8 @@ SRC = test
 	$(OBJCOPY) -O binary --reverse-bytes=4 $< $@ 
 
 %.hex: %.bin 
-	$(OBJCOPY) -O verilog -I binary --verilog-data-width=4 $< $@
+	xxd -g 4 -c 4 -p $< $@
+#	$(OBJCOPY) -O verilog -I binary --verilog-data-width=4 $< $@
 
 default: $(SRC).hex
 
